fix fontSize of header and description, including gaps of stats tags

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,12 +17,12 @@
 }
 
 h1{
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   line-height: 2rem;
   font-weight: 700;
 
   @include tablet{
-    font-size: 2.0625rem;
+    font-size: 2.25rem;
     line-height: 2.75rem;
   }
 }
